[project]
name = "pylakesoul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["lakesoul-dataset", "pyarrow==16.1.0"]

[tool.uv.sources]
lakesoul-dataset = { workspace = true }


[tool.uv.workspace]
members = ["packages/*"]


[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
