[project]
name = "lakesoul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "lakesoul-dataset", "pyarrow==16.1.0" ]


[[project.authors]]
name = "mag1c1an1"
email = "mag1cian@icloud.com"


[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true


[tool.uv.workspace]
members = [ "lakesoul-dataset" ]


[tool.uv.sources.lakesoul-dataset]
workspace = true


[build-system]
requires = [ "hatchling" ]
build-backend = "hatchling.build"


[dependency-groups]
dev = [ "pytest>=8.4.1" ]
