# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-io"
version = "3.0.0"
edition = "2024"

[dependencies]
proto = { path = "../proto" }

datafusion-common = { workspace = true }
datafusion-common-runtime = { workspace = true }
datafusion-session = {workspace = true}
datafusion-expr = { workspace = true }
datafusion-physical-expr = { workspace = true }
datafusion-physical-plan= {workspace=true}
datafusion-execution= {workspace=true}
datafusion-datasource = {workspace=true}

arrow = { workspace = true, features = ["prettyprint"] }
arrow-schema = { workspace = true, features = ["serde"] }
arrow-array = { workspace = true, features = ["chrono-tz"] }
arrow-buffer = { workspace = true }
arrow-cast = { workspace = true }
parquet = { workspace = true, features = ["async", "arrow"] }
object_store = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }

futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }

# utils
url = { workspace = true }
educe = { workspace = true ,features = ["Default"]}
half = "2.7"
atomic_refcell = "0.1"
parking_lot = {workspace = true}
smallvec = "1.15"
bytes = { workspace = true }
dary_heap = "0.3"
nohash = "0.2.0"

# logging
tracing = {workspace = true}

hdrs = { git = "https://github.com/lakesoul-io/hdrs.git", branch = "main", features = ["async_file"], optional = true }
hdfs-sys = { version = "0.3", default-features = false, features = ["hdfs_3_3"], optional = true }

chrono =  {workspace = true}

serde_json = { workspace = true }
rand = { workspace = true }
prost = { workspace = true }
const-hex = "1.17"
# dhat = { version = "0.3.3", optional = true }
# ndarray = "0.15.6"
#hdf5 = {version = "0.8.1"}
# uuid = { workspace = true }
regex = "1.12"

# num_cpus = "1.16"
# filetime = "0.2.25"
# fs-err = "3.1.0"
# linked-hash-map = "0.5.6"
# moka = { version = "~0.12", features = ["future"] }
# tempfile = "3"
# sysinfo = "~0.32"
# walkdir = "2.5.0"
# rand_distr = {workspace = true}
rootcause = {workspace = true}

[features]
hdfs = ["dep:hdrs", "dep:hdfs-sys"]
default = []
# dhat-heap = ["dep:dhat"]    # if you are doing heap profiling
# dhat-ad-hoc = []  # if you are doing ad hoc profiling

# [target.'cfg(target_os = "windows")'.dependencies]
# datafusion-substrait = { workspace = true }

# [target.'cfg(not(target_os = "windows"))'.dependencies]
# datafusion-substrait = { workspace = true, features = ["protoc"] }


[dev-dependencies]
tempfile = "3.3.0"
comfy-table = "6.0"
whoami = "1.5"
tracing-subscriber = "0.3.18"
tokio-test = "0.4.4"

[lints]
workspace = true
