# SPDX-FileCopyrightText: 2023 LakeSoul Contributors
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "lakesoul-metadata"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres-types = { version = "0.2.5", features = ["derive"] }
bytes = { version = "1.5.0" }

proto = { path = "../proto" }
prost = { workspace = true }

num_enum = "0.5.1"
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"
url = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = "1.10.3"
cfg-if = { workspace = true }

[dev-dependencies]
test-log = "0.2.14"
tracing-subscriber = "0.3.18"
rand = "0.8.5"
rand_chacha = "0.3.1"


[target.'cfg(not(target_family="wasm"))'.dependencies]
tokio-postgres = { version = "0.7.8", default-features = true, features = ["with-serde_json-1", "with-uuid-1", "array-impls", "js"] }
tokio = { version = "1", default-features = false, features = ["full"] }

[target.'cfg(target_family="wasm")'.dependencies]
tokio-postgres = { version = "0.7.8", default-features = false, features = ["with-serde_json-1", "with-uuid-1", "array-impls", "js"] }
tokio = { version = "1", default-features = false, features = ["sync", "macros", "io-util", "rt", "time"] }


