[project]
name = "lakesoul-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mag1c1an1", email = "mag1cian@icloud.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lakesoul-dataset = "lakesoul_dataset:main"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
build.verbose = true
logging.level = "ERROR"
cmake.args = ["-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"
