[project]
name = "lakesoul-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "pyarrow==16.1.0" ]


[[project.authors]]
name = "mag1c1an1"
email = "mag1cian@icloud.com"


[project.scripts]
lakesoul-dataset = "lakesoul_dataset:main"


[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"


[tool.scikit-build.build]
verbose = true


[tool.scikit-build.logging]
level = "ERROR"


[tool.scikit-build.cmake]
args = [ "-DCMAKE_EXPORT_COMPILE_COMMANDS=ON" ]


[build-system]
requires = [ "scikit-build-core>=0.10", "cython" ]
build-backend = "scikit_build_core.build"
